--- a/src/components/Buttons/TitleLink/TitleLink.module.scss
+++ b/src/components/Buttons/TitleLink/TitleLink.module.scss
@@ -4,10 +4,12 @@
   display: flex;
   align-items: baseline;
   justify-content: space-between;
-  max-width: 400px;
+  width: fit-content;
+  & h2 {
+    margin: 0;
+  }
 
   @media screen and (min-width: $tablet) {
-    width: fit-content;
     margin: 0;
   }
 }
