--- a/src/components/HomeSwiper/homeSwiper.css
+++ b/src/components/HomeSwiper/homeSwiper.css
@@ -4,14 +4,14 @@
   font-weight: 400;
   margin-left: -20px;
   margin-right: -20px;
-  padding-bottom: 40px;
+  padding: 24px 0px;
 
-  /* @media screen and (min-width: 768px) {
-    height: 352px;
+  @media screen and (min-width: 768px) {
+    padding: 40px 0px;
   }
   @media screen and (min-width: 1440px) {
-    height: 617px;
-  } */
+    padding: 40px 0px 80px;
+  }
 }
 
 .homeSwiper .swiper-slide {
@@ -23,31 +23,31 @@
 .homeSwiper .wrapp {
   /* width: 280px; */
   width: 100%;
-  aspect-ratio: 1280 / 537;
-  /* max-width: 400px; */
-  /* height: 340px; */
+  aspect-ratio: 280 /337;
+  max-height: 432px;
   border-radius: 32px;
   box-shadow: 2px 2px 4px rgba(75, 75, 78, 0.502);
   overflow: hidden;
-  /* overflow: auto; */
   padding: 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  gap: 16px;
 
   @media screen and (min-width: 768px) {
+    aspect-ratio: 1280 / 537;
+    /* aspect-ratio: 2/1; */
+    max-height: none;
     flex-direction: row-reverse;
     gap: 40px;
     border-radius: 50px;
     max-width: none;
     width: 100%;
     padding: 32px 24px;
-    /* height: 312px; */
   }
   @media screen and (min-width: 1440px) {
     gap: 54px;
-    /* height: 537px; */
   }
 }
 
@@ -61,8 +61,11 @@
     height: 100%;
     flex-direction: column;
     justify-content: space-between;
-    flex: 1;
+    flex: 1.2;
     border-bottom: none;
+  }
+  @media screen and (min-width: 1440px) {
+    flex: 1.5;
   }
 }
 .homeSwiper .txtWrapp .title {
@@ -83,24 +86,55 @@
 }
 .homeSwiper .txtWrapp .descr {
   font-weight: 500;
+  font-size: 16px;
+  @media screen and (min-width: 1440px) {
+    font-size: 24px;
+  }
 }
 .homeSwiper .btnsBlock {
   display: flex;
   justify-content: space-between;
 }
 .homeSwiper .btnsBlock a {
-  background-color: aqua;
+  width: 155px;
+  height: 36px;
+  padding: 0px 14px;
+
+  @media screen and (min-width: 1024px) {
+    width: 200px;
+    height: 54px;
+    padding: 0px 24px;
+  }
+
+  @media screen and (min-width: 1440px) {
+    width: 325px;
+    height: 77px;
+    padding: 0px 64px;
+  }
+}
+.homeSwiper .btnsBlock a:first-child {
+  background-color: transparent;
+  border: 1px solid rgb(242, 101, 21);
+  color: rgb(25, 43, 57);
+}
+.homeSwiper .btnsBlock a:first-child svg {
+  fill: rgb(25, 43, 57);
+}
+
+.homeSwiper .btnsBlock .leftMarging {
+  margin-left: auto;
 }
 
 .homeSwiper .imgWrapp {
   width: 100%;
   height: 232px;
+  height: 100%;
   overflow: hidden;
   position: relative;
   border-radius: 24px;
 
   @media screen and (min-width: 768px) {
-    height: 100%;
+    /* height: 100%; */
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
     flex: 1;
   }
@@ -110,4 +144,29 @@
   object-fit: cover;
 }
 
-/* .swiper-slide .wrapp  */
+.homeSwiper .swiper-button-prev,
+.homeSwiper .swiper-button-next {
+  bottom: 0;
+  top: auto;
+  width: 70px;
+  height: 8px;
+}
+
+.homeSwiper .swiper-button-prev {
+  content: url("../../../public/images/sliderArrLeft.webp");
+  left: 25%;
+
+  @media screen and (min-width: 768px) {
+    right: 132px;
+    left: auto;
+  }
+}
+
+.homeSwiper .swiper-button-next {
+  content: url("../../../public/images/sliderArrRight.webp");
+  right: 25%;
+
+  @media screen and (min-width: 768px) {
+    right: 32px;
+  }
+}
