--- a/src/components/NavigationHeader/NavigationHeader.module.scss
+++ b/src/components/NavigationHeader/NavigationHeader.module.scss
@@ -103,6 +103,9 @@
   z-index: 10;
   cursor: pointer;
   font-weight: 600;
+  @media screen and (min-width: $desktop) {
+    font-weight: 400;
+  }
 }
 .arrow {
   width: 12px;
