--- a/src/sections/missionSection/MissionSection.module.scss
+++ b/src/sections/missionSection/MissionSection.module.scss
@@ -61,21 +61,54 @@
     }
 }
 
-.btn {
+// .btn {
+//     padding: 16px 24px;
+//     width: 280px;
+//     margin: 0 auto;
+//     display: block;
+//     border-radius: 54px;
+//     border: transparent;
+//     box-shadow: 2px 2px 4px 0 $borderColorLangSwitch;
+//     background-color: $accentColor;
+//     color: $white ;
+//     font-family: var(--montserrat);
+//     font-weight: 500;
+//     font-size: 16px;
+//     line-height: 1.2;
+//     cursor: pointer;
+
+//     @media screen and (min-width: $tablet) {
+//         padding: 24px 32px;
+//         width: 704px;
+//         display: flex;
+//         align-items: center;
+//         justify-content: space-between;
+//         font-size: 24px;
+
+//         &:hover .arrow,
+//         &:focus .arrow {
+//             transform: rotate(90deg);
+//         }
+//     }
+
+//     @media screen and (min-width: $desktop) {
+//         padding: 32px 40px;
+//         width: 650px;
+//         margin: 0;
+//     }
+// }
+
+.statuteBtn {
     padding: 16px 24px;
     width: 280px;
+    height: auto;
     margin: 0 auto;
     display: block;
     border-radius: 54px;
     border: transparent;
     box-shadow: 2px 2px 4px 0 $borderColorLangSwitch;
-    background-color: $accentColor;
-    color: $white ;
-    font-family: var(--montserrat);
     font-weight: 500;
-    font-size: 16px;
     line-height: 1.2;
-    cursor: pointer;
 
     @media screen and (min-width: $tablet) {
         padding: 24px 32px;
@@ -84,6 +117,11 @@
         align-items: center;
         justify-content: space-between;
         font-size: 24px;
+
+        & .arrow {
+            width: 24px;
+            height: 23px;
+        }
 
         &:hover .arrow,
         &:focus .arrow {
@@ -98,13 +136,13 @@
     }
 }
 
-.arrow {
-    display: none;
+// .arrow {
+//     display: none;
 
-    @media screen and (min-width: $tablet) {
-        display: block;
-        width: 24px;
-        height: 24px;
-        fill: $white;
-    }
-}
+//     @media screen and (min-width: $tablet) {
+//         display: block;
+//         width: 24px;
+//         height: 23px;
+//         fill: $white;
+//     }
+// }
