--- a/src/components/dashboard/DashboardComponents.module.scss
+++ b/src/components/dashboard/DashboardComponents.module.scss
@@ -50,7 +50,7 @@
 }
 
 .dataForm {
-    padding: 40px 20px;
+    padding: 44px 20px;
     display: flex;
     flex-direction: column;
     row-gap: 16px;
@@ -215,7 +215,7 @@
 .itemCard {
     position: relative;
     flex: 1;
-    padding: 40px 20px;
+    padding: 44px 20px;
     display: flex;
     flex-direction: column;
     row-gap: 16px;
@@ -296,3 +296,25 @@
 }
 
 // USER
+.userItemCard {
+    padding: 60px;
+}
+
+.userDataForm {
+    padding: 40px;
+}
+
+.userCheckboxLabel {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.userCheckbox {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+}
