--- a/src/components/Forms/FormStyles.module.scss
+++ b/src/components/Forms/FormStyles.module.scss
@@ -12,28 +12,55 @@
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    row-gap: 24px;
 
-    //   @media screen and (min-width: $mobile) {
-    //     width: 312px;
-    //   }
-
-    //   @media screen and (min-width: $tablet) {
-    //     width: 474px;
-    //   }
+    @media screen and (min-width: $tablet) {
+        width: 704px;
+        row-gap: 0;
+    }
 
     //   @media screen and (min-width: $laptop) {
     //     width: 568px;
     //   }
 
-    //   @media screen and (min-width: $desktop) {
-    //     width: 636px;
-    //   }
+    @media screen and (min-width: $desktop) {
+        width: 723px;
+    }
+}
+
+.wrapper {
+    width: 100%;
+
+    @media screen and (min-width: $tablet) {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.wrapper:not(:last-child) {
+    margin-bottom: 24px;
+    @media screen and (min-width: $tablet) {
+        margin-bottom: 0;
+    }
+}
+
+.innerBox {
+    width: 100%;
+    @media screen and (min-width: $tablet) {
+        width: 306px;
+    }
+}
+
+.innerBox:not(:last-child) {
+    margin-bottom: 24px;
 }
 
 .inputWrap {
     width: 100%;
     position: relative;
+}
+
+.inputWrap:not(:last-child) {
+    margin-bottom: 24px;
 }
 
 .input {
@@ -110,12 +137,24 @@
     display: flex;
     text-align: center;
     justify-content: space-around;
+    margin-bottom: 32px;
+    @media screen and (min-width: $tablet) {
+        width: 144px;
+        justify-content: space-between;
+        margin-bottom: 0;
+    }
 }
 
 .inputCheckboxWrap {
+    width: 100%;
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media screen and (min-width: $tablet) {
+        flex-direction: row;
+        width: 356px;
+    }
 }
 
 .checkboxTitle {
@@ -126,6 +165,11 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 1.2;
+    @media screen and (min-width: $tablet) {
+        margin-bottom: 0;
+        margin-right: 36px;
+        text-align: left;
+    }
 }
 
 .submitButton {
@@ -141,6 +185,11 @@
     box-shadow: 2px 2px 4px 0px rgba(75, 75, 78, 0.5);
     background-color: rgba(250, 250, 255, 1);
     color: rgba(25, 43, 57, 1);
+    cursor: pointer;
+
+    @media screen and (min-width: $tablet) {
+        width: 315px;
+    }
 }
 
 .activeBtn {
@@ -165,5 +214,10 @@
 }
 
 .errorCheckbox {
-    bottom: -20px;
+    right: auto;
+    bottom: 10px;
+    @media screen and (min-width: $tablet) {
+        right: 10px;
+        bottom: -5px;
+    }
 }
